# dual-arm-teleoperation-ros2

./: .gitignore  README.md
src/dual_arm_description/: CMakeLists.txt  package.xml
src/dual_arm_description/urdf/: dual_panda.urdf.xacro  dual_panda.urdf.xacro.save
src/dual_arm_moveit_config/: CMakeLists.txt  package.xml
src/dual_arm_moveit_config/config/: dual_panda.srdf.xacro  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  servo.yaml
src/dual_arm_moveit_config/launch/: dual_panda_moveit_rviz.launch.py
src/dual_arm_moveit_config/rviz/: dual_panda_moveit.rviz
src/dual_panda_teleop/: package.xml  setup.py
src/dual_panda_teleop/dual_panda_teleop/: hand_teleop_node.py  moveit_follower_node.py
